--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - about.md
+  - README.md
+
