--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,17 @@
                 "${workspaceFolder}/test"
             ],
             "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest Tests",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
+            "args": [
+                "-i",
+                "./test/"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
