--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lodash.partialright": "^4.2.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "jest": "^24.7.1"
   }
 }
