--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "search-party-script",
   "version": "1.0.0",
   "dependencies": {
+    "chalk": "^2.4.2",
     "chevrotain": "^4.3.2",
+    "figlet": "^1.2.1",
     "lodash.isempty": "^4.4.0",
     "lodash.last": "^3.0.0",
     "lodash.partialright": "^4.2.1"
