--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,18 @@
         },
         {
             "type": "node",
+            "request": "launch",
+            "name": "Formatting",
+            "program": "${workspaceFolder}/nut-format.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Simple Formatting",
+            "program": "${workspaceFolder}/nut-format-simple.js"
+        },
+        {
+            "type": "node",
             "request": "attach",
             "name": "Attach",
             "port": 9229
@@ -40,6 +52,18 @@
             "args": [
                 "-i",
                 "./test/"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest Test Scopes",
+            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
+            "disableOptimisticBPs": true,
+            "args": [
+                "-i",
+                "./test/nut-scopes-local.test.js"
             ],
             "internalConsoleOptions": "openOnSessionStart"
         }
