--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,40 +8,25 @@
             "type": "node",
             "request": "launch",
             "name": "Story Run",
-            "program": "${workspaceFolder}/nut-run.js"
+            "program": "${workspaceFolder}/src/nut-run.js"
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Formatting",
-            "program": "${workspaceFolder}/nut-format.js"
+            "program": "${workspaceFolder}/src/nut-format.js"
         },
         {
             "type": "node",
             "request": "launch",
             "name": "Simple Formatting",
-            "program": "${workspaceFolder}/nut-format-simple.js"
+            "program": "${workspaceFolder}/src/nut-format-simple.js"
         },
         {
             "type": "node",
             "request": "attach",
             "name": "Attach",
             "port": 9229
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Mocha Tests",
-            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-            "args": [
-                "-u",
-                "tdd",
-                "--timeout",
-                "999999",
-                "--colors",
-                "${workspaceFolder}/test"
-            ],
-            "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "node",
