--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "mast-script",
   "version": "1.0.0",
+  "type": "module",
+  "main": "./src/index.js",
   "scripts": {
     "dev": "webpack --target node --mode development",
     "build": "webpack --target node --mode production"
