--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,35 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Mocha Tests",
+        "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+        "args": [
+            "-r","esm",
+            "-u",
+            "tdd",
+            "--timeout",
+            "999999",
+            "--colors",
+            "${workspaceFolder}/test"
+        ],
+        "internalConsoleOptions": "openOnSessionStart",
+        
+    },
         {
             "type": "node",
             "request": "launch",
             "name": "Story Run",
             "program": "${workspaceFolder}/src/nut-run.mjs"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Repl Run",
+            "program": "${workspaceFolder}/src/nut-repl.mjs",
+            "runtimeArgs": ["--experimental-modules"]
         },
         {
             "type": "node",
