--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "type": "module",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "webpack --target node --mode development",
-    "build": "webpack --target node --mode production"
+    "start": "node --experimental-modules src/nut-repl.mjs"
   },
   "dependencies": {
     "ascii-art": "^1.5.1",
+    "canvas": "^2.5.0",
     "chalk": "^2.4.2",
     "chevrotain": "^4.3.2",
     "figlet": "^1.2.1",
     "lodash.isempty": "^4.4.0",
     "lodash.last": "^3.0.0",
-    "lodash.partialright": "^4.2.1",
-    "webpack": "^4.30.0"
+    "lodash.partialright": "^4.2.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "esm": "^3.2.25",
     "jest": "^24.7.1",
-    "webpack-cli": "^3.3.2"
+    "mocha": "^6.2.0"
   }
 }
