--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
         "args": [
             "-r","esm",
             "-u",
-            "tdd",
+            "bdd",
             "--timeout",
             "999999",
             "--colors",
@@ -25,15 +25,10 @@
             "type": "node",
             "request": "launch",
             "name": "Story Run",
-            "program": "${workspaceFolder}/src/nut-run.mjs"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Repl Run",
-            "program": "${workspaceFolder}/src/nut-repl.mjs",
+            "program": "${workspaceFolder}/src/nut-run.mjs",
             "runtimeArgs": ["--experimental-modules"]
         },
+        
         {
             "type": "node",
             "request": "launch",
@@ -55,26 +50,20 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Jest Tests",
-            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
-            "disableOptimisticBPs": true,
+            "name": "Mocha Test scope",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "args": [
-                "-i",
-                "./test/"
+                "-r","esm",
+                "-u",
+                "bdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/test/nut-scopes-local.test.js"
             ],
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Jest Test Scopes",
-            "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
-            "disableOptimisticBPs": true,
-            "args": [
-                "-i",
-                "./test/nut-scopes-local.test.js"
-            ],
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            
         }
+        
     ]
 }
